0.7.0 - currently working on
- [#3272] Feature: Provide a parameter "sorting" to mapper::findAll
- [#3338] Fix: E-Mails still contain CRLF
- [#3281] Fix: Free memory more agressively
- [#3340] Change: Move the creation of the headers and the body out of the loop in abstractMailer::send
- [#3328] Fix: Ghost acquired via getNewGhost must not be loaded
- [#3317] Fix: Check for object comparisons / recursive nesting
- [#3320] Fix: Unbreak GMX by changing the default encoding for e-mails from base64 back to quoted-printable
- [#3319] Change: Use only LF in the e-mail body
- [#3250] Change: Throw an exception when trying to save a model that has been created using getNewGhost or getLoadedTestingModel
- [#3239] Change: Test that newly saved models are registered in the mapper
- [#920] Fix: Umlauts in sender names are broken
- [#3241] Feature: Add dataMapper::findAll
- [#3226] Change: Add a test for getTcaForTable
- [#3218] Feature: When calling mail, exhibit the same behavior as t3lib_htmlmail::sendTheMail
- [#3917] Fix: A data mapper in testing mode must mark new records as dummy records
- [#3186] Fix: The translator overrides localized keys
- [#3165] Fix: Umlauts not encoded correctly in the e-mail subject
- [#3176] Fix: Locallang strings cannot be overwritten using TS setup
- [#3081] Feature: Add a TS setup setting for the return path of the e-mails
- [#3158] Feature: Add getFirstOrFullName and getLastOrFullName to front-end user model
- [#2988] Fix: Skip the ZipArchive tests if no ZipArchive is available
- [#3138] Change: Add ?: to subpatterns in preg* functions to deactivate capturing of subpatterns where it makes sense
- [#3136] Change: Remove srand() call from Mail_mime class
- [#3135] Change: Use $_SERVER['REQUEST_TIME'] in Mail_mime class
- [#3056] Fix: E-mails have double line breaks
- [#3062] Feature: Add getters for the last name and the first name to the oelib front-end user model
- [#2885] Feature: Add FrontEndUser::getGender